[tool.poetry]
name = "drf-course-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"
eventlet = "^0.36.1"
redis = "^5.0.5"
django-celery-beat = "^2.6.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
requests = "^2.32.3"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
